[tool.poetry]
name = "temple-capital"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.3"
numpy = "^1.21.2"
scipy = "^1.7.1"
matplotlib = "^3.4.3"
ipython = "^7.28.0"
jupyter = "^1.0.0"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
